fix burger menu sub-itms overlap

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header {
 .burger {
     display: block;
     cursor: pointer;
-    width: 2rem;
+    width: 3rem;
     height: 2rem;
 }
 
@@ -33,6 +33,11 @@ header {
     width: 100%;
     height: auto;
 }
+.logo-img {
+    width: 5rem;
+    height: 3rem;
+}
+
 
 /* Hide Checkbox */
 #menu-toggle {
@@ -43,10 +48,8 @@ header {
     flex-direction: row;
 }
 
-.logo-img {
-width: 5rem;
-height: 3rem;
-}
+
+
 
 
 /* Navbar Default State */
@@ -81,15 +84,16 @@ height: 3rem;
 /* Dropdown Menu for Sub-Items */
 .navbar ul li ul {
     display: none;
-    position: absolute;
     left: 0;
     top: 100%;
+    width: 10%;
     background-color:rgba(0, 0, 0, 0.7);
 }
 
 .navbar ul li:hover ul {
     display: flex;
     flex-direction: column;
+    
 }
 
 .navbar ul li ul li a {
@@ -256,7 +260,7 @@ h2 {
 }
 
 
-@media (min-width: 1100px) {
+@media (min-width: 1200px) {
 
 
    
@@ -292,57 +296,45 @@ h2 {
 
 
 
-
-
-
-
-
-@media (min-width: 768px) {
+@media (max-width: 1024px) {
    
-    
-    /* Navbar for Desktop */
-    .navbar ul {
-        display: flex; /* Show menu in row format */
-        flex-direction: row;
-        position: static;
-        justify-content: center;
-    }
-    
-    .navbar ul li {
-        margin: 0 1rem;
-    }
-    
-    .navbar ul li a {
-        font-size: 1rem;
-        padding: 0.5rem 1rem;
-    }
-    
-    .navbar ul li ul {
-        position: absolute;
-        top: 100%;
-        left: 0;
-    }
-    
     .burger {
-        display: none;
+
     }
 
 
+}
 
 
 
 
+@media (max-width: 768px) {
+   
+    body {   
+    } 
+    .artikel-content4 {
+        margin-left: 5%;
+        margin-right: %;
+        margin-top: 30%;
+        top: 0;
+        text-align: left;
+        position: absolute; 
+        width: 87%; 
+        height: 70rem;
+        background: rgba(0, 0, 0, 0.7); 
+        color: aliceblue; 
+        z-index: 1;
+    }
+    
 
 
 
 
+}
 
+@media (max-width: 591px) {
 
-
-
-
-
-
+    
 
 }
 
@@ -358,160 +350,19 @@ h2 {
 
 
 
-
-@media (max-width: 400px) {
-
-body {   
-}
-.tekst {
-    color: aliceblue;
+@media (max-width: 480px) {
+.burger {
+    margin-left: 15rem;
 }
 
-
-.top-img {
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
-    display: block;
-}
-
-.artikel-1 {
-    position: relative; 
-    margin: 2rem auto;  
-    height: 100rem; 
-    color: aliceblue; 
-    z-index: 0;
-}
-
-.artikel-2 {
-    position: relative; 
-    margin: 2rem auto;  
-    height: 50rem; 
-    color: aliceblue; 
-    z-index: 0;
-}
-
-.artikel-1-img {
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width: 90%; 
-    height: 20rem; 
-    align-items: center;
-    z-index: 0; 
-    padding-bottom: 5rem;
-    margin-left: 5%;
-}
-
-.artikel-content {
-    margin-top: 10%;
-    top: 0;
-    text-align: left;
-    position: absolute;
-    width: 80%; 
-    background: rgba(0, 0, 0, 0.7); 
-    color: aliceblue; 
-    z-index: 1; 
-}
-
-.artikel-content3{
-    position: absolute; 
-    bottom: 0; 
-    left: 0;
-    right: 0;
-    width: 50%; 
-    background: rgba(0, 0, 0, 0.7); 
-    color: aliceblue; 
-    z-index: 1;
-    max-width: 35%;
-    text-align: center;
-    margin-bottom: 8%;
-    margin-left: 5%;
-}
-
-.artikel-content2 {
-    margin-left: 20%;
-    margin-top: 25%;
-    top: 0;
-    text-align: left;
-    position: absolute; 
-    width: 57%; 
-    background: rgba(0, 0, 0, 0.7); 
-    color: aliceblue; 
-    z-index: 1;
-}
-
-.event-tekst {
-    margin: 1rem; 
-    padding-left: 4rem;
-    padding-right: 4rem;
-    font-size: 1.3rem;
-    margin-bottom: 9%;
-    margin-right: 15%;
-    margin-left: 15%;
-}
-
-.tekst {
-    margin: 1rem; 
-    padding-left: 4rem;
-    padding-right: 4rem;
-    font-size: 0.3rem;
-    margin-bottom: 2%;
-    margin-right: 47%;
+h1 {
+    font-size: 15px;
+    margin-left: 3rem;
+    margin-top: 1.5rem;
 }
 
 .tekst-lp {
-    margin: 1rem; 
-    font-size: 0.3rem;
-    margin-bottom: 2%;
+    font-size: 8px;
 }
-
-.tekst-fri{
-    margin: 1rem; 
-    font-size: 0.3rem;
-    margin-right: 15%;
-    margin-left: 15%;
-    color: #ffffff;
-}
-
-h2 {
-    color: aliceblue; 
-    margin-left: 10%;
-    margin-right: 10%;
-    font-size: 1.8rem;
-}
-
-.frivillig-højre {
-    margin-top: 12%;
-}
-
-.frivilig {
-    display: flex;
-    margin: 10%;
-}
-
-.boxes{
-    display: flex;
-    flex-direction: row;
-    margin-left: 2rem;
-    margin-right: 5rem;
-    margin-top: 3rem;
-}
-
-.boxes img {
-    width: 7rem;
-    height: 7rem;
-}
-
-
-
-
-
-
-
-
-
-
-
 
 }
